[tool.poetry]
name = "repl_python3_cs9-final-project-ajguindo"
version = "0.1.0"
description = ""
authors = ["Amira-JJ <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
part2 = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
